# temporal-ai-chef

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
temporal_ai_chef/: __init__.py  activities.py  llm_client.py  run_chef.py  run_with_worker.py  test_complete.py  test_different_recipes.py  test_end_to_end.py  test_stage1.py  worker.py  workflow.py
temporal_ai_chef/data/: ingredients.json  tools.json
